# pa-opus-audio

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  binding.gyp  package-lock.json  package.json  runvcpkgbootstrap.js  tsconfig.json  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-windows.txt
.github/workflows/: build.yml  prebuild.yml
doc/: input_encoding.md  latency.md
lib/: binding.ts  tsconfig.json
src/: DecodeWorker.cpp  DecodeWorker.h  EncodeWorker.cpp  EncodeWorker.h  detect.c  paDecodeOutStream.cpp  paDecodeOutStream.h  paEncodeInStream.cpp  paEncodeInStream.h  paStreamCommon.cpp  paStreamCommon.h  poaBase.cpp  poaBase.h  poaDecodeOutput.cpp  poaDecodeOutput.h  poaEncodeInput.cpp  poaEncodeInput.h  protoring.cpp  rehearse20.cc  rehearse20.h  tryout.cpp  tryout.h
test/: test_binding.js  test_detect.ts  test_duplex.ts  test_output.ts  test_protoring.js  test_protoring.ts  test_readme.ts  test_rtpoutput.ts  tryout.ts  tsconfig.json
vcpkg-ports/opus/: CONTROL  portfile.cmake
vcpkg-ports/portaudio/: CONTROL  portfile.cmake
